[QF-4339] Fix Surah Info Modal Spacing & Colors  (#2726)
* fix: modal color and spacing

* fix: update line-height variable in SurahInfoModal styles

* fix: standardize spacing variables in SurahInfoModal styles

* fix(ui): resolve regression introduced in #2646

https://github.com/quran/quran.com-frontend-next/pull/2646/changes#diff-30031f30262b9b8e69ab331c4c3be6ad7f7a48b109d15c916ec9918b8071b7c8

--- a/src/components/QuranReader/TranslationView/BottomActionsModals.module.scss
+++ b/src/components/QuranReader/TranslationView/BottomActionsModals.module.scss
@@ -11,6 +11,7 @@
     flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
+    border-block-end: none;
 
     @include breakpoints.tablet {
       padding-inline: var(--spacing-large-px);
